Fix odal size overflow

--- a/ui/src/app/social-service-editor/social-service-editor.component.less
+++ b/ui/src/app/social-service-editor/social-service-editor.component.less
@@ -159,17 +159,18 @@
             background: white;
             border: black;
             border-radius: 4px;
-            min-height: 700px;
+            height: 700px;
             min-width: 50%;
             position: relative;
             padding: 16px 8px;
+            max-height: 100vh;
 
             .close {
                 position: absolute;
                 left: 10px;
                 top: 1px;
                 font-size: 16px;
-                color: #888;
+                color: #444;
                 cursor: pointer;
                 text-decoration: underline;
             }
